--- a/c++tools/configure.ac
+++ b/c++tools/configure.ac
@@ -1,20 +1,5 @@
 # Configure script for c++tools
-#   Copyright (C) 2020-2022 Free Software Foundation, Inc.
-#   Written by Nathan Sidwell <nathan@acm.org> while at FaceBook
-#
-# This file is free software; you can redistribute it and/or modify it
-# under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful, but
-# WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; see the file COPYING3.  If not see
-# <http://www.gnu.org/licenses/>.
+# Please review $(srcdir/SPL-README) for GNU licencing info.
 
 # C++ has grown a C++20 mapper server.  This may be used to provide
 # and/or learn and/or build required modules.  This sample server
